fix(server): simplify app deploy environment api input params
