# public/swagger.json
@@ -297,15 +297,18 @@
 					},
 					"project": {
 						"type": "string",
-						"description": "[Google Cloud] PROJECT_ID"
+						"description": "[Google Cloud] PROJECT_ID",
+						"deprecated": true
 					},
 					"region": {
 						"type": "string",
-						"description": "[Google Cloud] Region"
+						"description": "[Google Cloud] Region",
+						"deprecated": true
 					},
 					"zone": {
 						"type": "string",
-						"description": "[Google Cloud] Zone"
+						"description": "[Google Cloud] Zone",
+						"deprecated": true
 					},
 					"size": {
 						"$ref": "#/components/schemas/ResourceQuotaSize",
@@ -693,7 +696,8 @@
 								}
 							]
 						},
-						"type": "object"
+						"type": "object",
+						"deprecated": true
 					},
 					"deployEnvironment": {
 						"properties": {},
@@ -2495,7 +2499,8 @@
 				"properties": {
 					"shouldUseFreshDeploy": {
 						"type": "boolean",
-						"description": "[DANGER]\n---\nShould delete old deployment and deploy a new one from scratch"
+						"description": "[DANGER]\n---\nShould delete old deployment and deploy a new one from scratch",
+						"default": "false"
 					},
 					"author": {
 						"type": "string",
@@ -2533,15 +2538,18 @@
 					},
 					"project": {
 						"type": "string",
-						"description": "[Google Cloud] PROJECT_ID"
+						"description": "[Google Cloud] PROJECT_ID",
+						"deprecated": true
 					},
 					"region": {
 						"type": "string",
-						"description": "[Google Cloud] Region"
+						"description": "[Google Cloud] Region",
+						"deprecated": true
 					},
 					"zone": {
 						"type": "string",
-						"description": "[Google Cloud] Zone"
+						"description": "[Google Cloud] Zone",
+						"deprecated": true
 					},
 					"size": {
 						"$ref": "#/components/schemas/ResourceQuotaSize",
@@ -3452,6 +3460,9 @@
 				"$ref": "#/components/schemas/Pick_Project.Exclude_keyofProject.keyofHiddenBodyKeys__",
 				"description": "Construct a type with the properties of T except for those in type K."
 			},
+			"ProjectInputSchema": {
+				"$ref": "#/components/schemas/Omit_Project.keyofHiddenBodyKeys_"
+			},
 			"Pick_CloudProvider.Exclude_keyofCloudProvider.keyofHiddenBodyKeys__": {
 				"properties": {
 					"workspace": {
@@ -4252,7 +4263,8 @@
 								}
 							]
 						},
-						"type": "object"
+						"type": "object",
+						"deprecated": true
 					},
 					"deployEnvironment": {
 						"properties": {},
@@ -4268,6 +4280,85 @@
 			"Omit_App.keyofHiddenBodyKeys_": {
 				"$ref": "#/components/schemas/Pick_App.Exclude_keyofApp.keyofHiddenBodyKeys__",
 				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"AppInputSchema": {
+				"$ref": "#/components/schemas/Omit_App.keyofHiddenBodyKeys_"
+			},
+			"DeployEnvironmentData": {
+				"properties": {
+					"registry": {
+						"type": "string",
+						"description": "`REQUIRES`\n---\nContainer registry's slug"
+					},
+					"cluster": {
+						"type": "string",
+						"description": "`REQUIRES`\n---\nCluster's short name"
+					},
+					"replicas": {
+						"type": "number",
+						"format": "double",
+						"description": "OPTIONAL\n---\nContainer's scaling replicas",
+						"default": "1"
+					},
+					"port": {
+						"type": "number",
+						"format": "double",
+						"description": "`REQUIRES`\n---\nContainer's port",
+						"default": "3000"
+					},
+					"imageURL": {
+						"type": "string",
+						"description": "OPTIONAL\n---\nImage URI of this app on the Container Registry (without `TAG`).\n- Combined from: `<registry-image-base-url>/<project-slug>/<app-name-slug>`\n- **Don't** specify `tag` at the end! (eg. `latest`, `beta`,...)",
+						"example": "asia.gcr.io/my-workspace/my-project/my-app",
+						"default": "<registry-image-base-url>/<project-slug>/<app-name-slug>"
+					},
+					"namespace": {
+						"type": "string",
+						"description": "OPTIONAL\n---\nDestination namespace name, will be generated automatically by `<project-slug>-<env>` if not specified."
+					},
+					"size": {
+						"$ref": "#/components/schemas/ResourceQuotaSize",
+						"description": "OPTIONAL\n---\nContainer quota resources"
+					},
+					"shouldInherit": {
+						"type": "boolean",
+						"description": "OPTIONAL\n---\nSet to `false` if you DON'T want to inherit the Ingress YAML config from the previous deployment",
+						"default": "true"
+					},
+					"redirect": {
+						"type": "boolean",
+						"description": "OPTIONAL\n---\nSet to `false` if you don't want to redirect all the secondary domains to the primary domain.",
+						"default": "true"
+					},
+					"domains": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array",
+						"description": "`REQUIRES`\n---\nList of application's domains"
+					},
+					"cdn": {
+						"type": "boolean",
+						"description": "OPTIONAL\n---\nFlag to enable CDN for this application",
+						"default": "false"
+					},
+					"ssl": {
+						"$ref": "#/components/schemas/SslType",
+						"description": "OPTIONAL\n---\nSelect your SSL Certificate Issuer, one of:\n- `letenscrypt`\n- `custom`\n- `none`"
+					},
+					"tlsSecret": {
+						"type": "string",
+						"description": "OPTIONAL\n---\nSecret name to hold the key of SSL, will be automatically generated with the primary domain.\nOnly need to specify when using \"custom\" SSL (which is the SSL from third-party issuer)"
+					},
+					"ingress": {
+						"type": "string",
+						"description": "OPTIONAL\n---\nKubernetes Ingress Class",
+						"default": "nginx"
+					}
+				},
+				"required": ["registry", "cluster", "port", "domains"],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {
@@ -6818,7 +6909,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/Omit_Project.keyofHiddenBodyKeys_"
+								"$ref": "#/components/schemas/ProjectInputSchema"
 							}
 						}
 					}
@@ -6903,7 +6994,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/Omit_Project.keyofHiddenBodyKeys_"
+								"$ref": "#/components/schemas/ProjectInputSchema"
 							}
 						}
 					}
@@ -10282,7 +10373,9 @@
 					"required": true,
 					"content": {
 						"application/json": {
-							"schema": {}
+							"schema": {
+								"$ref": "#/components/schemas/AppInputSchema"
+							}
 						}
 					}
 				}
@@ -10477,43 +10570,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"anyOf": [
-										{
-											"properties": {
-												"messages": {
-													"items": {
-														"type": "string"
-													},
-													"type": "array"
-												},
-												"data": {
-													"$ref": "#/components/schemas/DeployEnvironment"
-												},
-												"status": {
-													"type": "number",
-													"format": "double"
-												}
-											},
-											"required": ["messages", "data", "status"],
-											"type": "object"
-										},
-										{
-											"properties": {
-												"messages": {
-													"items": {
-														"type": "string"
-													},
-													"type": "array"
-												},
-												"status": {
-													"type": "number",
-													"format": "double"
-												}
-											},
-											"required": ["messages", "status"],
-											"type": "object"
-										}
-									]
+									"$ref": "#/components/schemas/ResponseData"
 								}
 							}
 						}
@@ -10555,41 +10612,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"anyOf": [
-										{
-											"properties": {
-												"messages": {
-													"items": {},
-													"type": "array"
-												},
-												"data": {
-													"$ref": "#/components/schemas/AppConfig"
-												},
-												"status": {
-													"type": "number",
-													"format": "double"
-												}
-											},
-											"required": ["messages", "data", "status"],
-											"type": "object"
-										},
-										{
-											"properties": {
-												"messages": {
-													"items": {
-														"type": "string"
-													},
-													"type": "array"
-												},
-												"status": {
-													"type": "number",
-													"format": "double"
-												}
-											},
-											"required": ["messages", "status"],
-											"type": "object"
-										}
-									]
+									"$ref": "#/components/schemas/ResponseData"
 								}
 							}
 						}
@@ -10646,20 +10669,21 @@
 						"application/json": {
 							"schema": {
 								"properties": {
-									"clientDeployEnvironment": {
-										"$ref": "#/components/schemas/ClientDeployEnvironmentConfig",
-										"description": "Deploy environment configuration"
+									"deployEnvironmentData": {
+										"$ref": "#/components/schemas/DeployEnvironmentData",
+										"description": "`REQUIRES`\n---\nDeploy environment configuration"
 									},
 									"env": {
 										"type": "string",
-										"description": "Deploy environment name"
+										"description": "`REQUIRES`\n---\nDeploy environment name",
+										"default": "dev"
 									},
 									"slug": {
 										"type": "string",
-										"description": "App slug"
+										"description": "`REQUIRES`\n---\nApp slug"
 									}
 								},
-								"required": ["clientDeployEnvironment", "env", "slug"],
+								"required": ["deployEnvironmentData", "env", "slug"],
 								"type": "object"
 							}
 						}
